--- a/ntbks/extra_data.ipynb
+++ b/ntbks/extra_data.ipynb
@@ -2,12 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7bce608a-fbaa-4a53-96b0-0bfadb414428",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b42ab84d-5bda-4588-ad21-fa22dc86911c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
    ]
   },
   {
@@ -762,6 +772,42 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "46723614-2a6a-4167-94c7-61637161f770",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d817c41e-42f5-4774-b14b-2475bac8ba48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../data/globalindicators.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b3e3afd6-4bec-41cc-b092-5fdc84598ee5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for group, data in df.groupby('ISOCountryCode'):\n",
+    "    output_data = {}\n",
+    "    for subgroup, subdata in data.groupby('Item'):\n",
+    "        output_data[subgroup] = {\n",
+    "            'values':[{'x':year,'y':value} for year,value in zip(subdata.Year,subdata.Value)],\n",
+    "            'units':subdata.Unit.iloc[0]\n",
+    "        }\n",
+    "    with open(f'../app/public/data/indicators/{group}_indicators.json','w') as handle:\n",
+    "        json.dump(output_data,handle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a580774-da65-43ef-86a1-7318388eac7f",
    "metadata": {},
    "outputs": [],
    "source": []
