--- a/ntbks/gsap_explore.ipynb
+++ b/ntbks/gsap_explore.ipynb
@@ -45,7 +45,7 @@
    },
    "outputs": [],
    "source": [
-    "gsap_2021_df = gpd.read_file('../data/GSAP_AM24_2021/GSAP_AM24_2021.shp')"
+    "gsap_2021_df = gpd.read_file('../data/GSAP_geom/GSAP_AM24_2021.shp')"
    ]
   },
   {
@@ -75,8 +75,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "id": "2d2383e5-3fc8-4345-999e-4234075012ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for group, data in gsap_2021_df.groupby('code'):\n",
+    "    base = '../app/public/data/sub-national-geometry/'\n",
+    "    data = data[['geo_code','geo_name','geometry']].copy()\n",
+    "    data['geometry'] = data['geometry'].simplify(tolerance=0.001, preserve_topology=True)\n",
+    "    data.to_file(os.path.join(base,f\"{group}_gsap_geometry.geojson\"),driver='GeoJSON')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "143706d7-13da-4ab5-8cb8-48e009f79eb5",
+   "id": "328a4409-a451-4d7d-b4e2-ce9f813311be",
    "metadata": {},
    "outputs": [],
    "source": []
